JumpScript/tests/baselines/reference/generatorInAmbientContext2.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorInAmbientContext2.jump(2,14): error TS1221: Generators are not allowed in an ambient context.


==== tests/cases/conformance/es6/yieldExpressions/generatorInAmbientContext2.jump (1 errors) ====
    declare module M {
        function *generator(): any;
                 ~
!!! error TS1221: Generators are not allowed in an ambient context.
    }